--- a/Angular_2023_Course/src/app/app.component.html
+++ b/Angular_2023_Course/src/app/app.component.html
@@ -7,6 +7,10 @@
       <app-asssignment2></app-asssignment2>
       <hr>
       <app-assignment3></app-assignment3>
+      <hr>
+      <app-main-game></app-main-game>
+      <hr>
+      <app-section9main></app-section9main>
     </div>
   </div>
 </div>
