--- a/Recipe_App_Section_3/src/app/app.component.html
+++ b/Recipe_App_Section_3/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header (headerNavigationEmitter)="onNavigationEmitted($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <app-recipes *ngIf="isDisplayRecipes"></app-recipes>
+      <app-shopping-list *ngIf="!isDisplayRecipes"></app-shopping-list>
     </div>
   </div>
 </div>
