--- a/Recipe_App_Section_3/src/app/header/header.component.html
+++ b/Recipe_App_Section_3/src/app/header/header.component.html
@@ -9,12 +9,12 @@
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">Recipes</a></li>
-                <li><a href="#">Shopping Lists</a></li>
+                <li><a href="#" (click)="onRecipesClick()">Recipes</a></li>
+                <li><a href="#" (click)="onShoppingListClick()">Shopping Lists</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+                <li class="dropdown" appDropdown>
+                    <a href="#"  class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Save Data</a></li>
                         <li><a href="#">Fetch Data</a></li>
