--- a/Recipe_App_Section_3/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/Recipe_App_Section_3/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,17 +1,17 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="" class="img-responsive">
+        <img src="{{ recipeSelectedFromList.imagePath }}" alt="{{ recipeSelectedFromList.name }}" style="max-height: 300px" class="img-responsive">
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h1>Recipe Name</h1>
+        <h1>Recipe Name: {{ recipeSelectedFromList.name }}</h1>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <div class="btn-group">
-            <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span> </button>
+        <div class="btn-group" appDropdown>
+            <button  type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span> </button>
             <ul class="dropdown-menu">
                 <li> <a href="#">To shopping list</a></li>
                 <li> <a href="#">Edit Recipe </a></li>
@@ -22,7 +22,7 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        Description
+        Description: {{ recipeSelectedFromList.name }}
     </div>
 </div>
 <div class="row">
@@ -30,3 +30,4 @@
         Ingredients
     </div>
 </div>
+
