--- a/Recipe_App_Section_3/src/app/recipes/recipes.component.html
+++ b/Recipe_App_Section_3/src/app/recipes/recipes.component.html
@@ -1,8 +1,9 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recipe-list></app-recipe-list>
+        <app-recipe-list (onRecipeIteminListSelected)="onrecipeItemInListSelected($event)"></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-detail></app-recipe-detail>
+        <p *ngIf="!recipeSelected">Please select a recipe</p>
+        <app-recipe-detail *ngIf="recipeSelected" [recipeSelectedFromList]="recipeSelected"></app-recipe-detail>
     </div>
 </div>
