--- a/Recipe_App_Section_3/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/Recipe_App_Section_3/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -4,16 +4,16 @@
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control">
+                    <input type="text" id="name" class="form-control" #nameInputElement>
                 </div>
                 <div class="col-sm-2">
                     <label for="amount">Amount</label>
-                    <input type="number" id="amount" class="form-control">
+                    <input type="number" id="amount" class="form-control" #amountInputElement>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success mr-1" type="submit">Add</button>
+                    <button class="btn btn-success mr-1" type="submit" (click)="onShoppingListItemAdded(nameInputElement,amountInputElement)">Add</button>
                     <button class="btn btn-danger mr-1" type="button">Delete</button>
                     <button class="btn btn-primary mr-1" type="button">Clear</button>
                 </div>
