Section 10 Course Project Exercise

--- a/Recipe_App_Section_3/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/Recipe_App_Section_3/src/app/recipes/recipe-list/recipe-list.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <app-recipe-item *ngFor="let recipeEL of recipes" [recipe]="recipeEL" (onRecipeItemSelected)="onrecipeItemSelected($event)"></app-recipe-item>
+        <app-recipe-item *ngFor="let recipeEL of recipes" [recipe]="recipeEL"></app-recipe-item>
     </div>
 </div>
 
