--- a/Recipe_App_Section_3/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/Recipe_App_Section_3/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -13,7 +13,7 @@
         <div class="btn-group" appDropdown>
             <button  type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span> </button>
             <ul class="dropdown-menu">
-                <li> <a href="#">To shopping list</a></li>
+                <li> <a (click)="toShoppingList()">To shopping list</a></li>
                 <li> <a href="#">Edit Recipe </a></li>
                 <li> <a href="#">Delete Recipe </a></li>
             </ul>
@@ -26,8 +26,13 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-12">
-        Ingredients
+    <div class="col-xs-12">
+        
+        <ul class="list-group">
+            <li *ngFor="let ingredient of recipeSelectedFromList.ingredients" class="list-group-item">
+                {{ ingredient.name }} - {{ ingredient.amount }}
+            </li>
+        </ul>
     </div>
 </div>
 
