--- a/Recipe_App_Section_3/src/app/app.component.html
+++ b/Recipe_App_Section_3/src/app/app.component.html
@@ -2,8 +2,9 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <app-recipes *ngIf="isDisplayRecipes"></app-recipes>
-      <app-shopping-list *ngIf="!isDisplayRecipes"></app-shopping-list>
+      <router-outlet></router-outlet>
+      <!-- <app-recipes *ngIf="isDisplayRecipes"></app-recipes> -->
+      <!-- <app-shopping-list *ngIf="!isDisplayRecipes"></app-shopping-list> -->
     </div>
   </div>
 </div>
