--- a/Recipe_App_Section_3/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/Recipe_App_Section_3/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,10 +1,11 @@
 <div class="row">
     <div class="col-md-12">
-        <button class="btn btn-success">New Recipe</button>
+        <button class="btn btn-success" (click)="newRecipe()">New Recipe</button>
     </div>
 </div>
 <div class="row">
     <div class="col-md-12">
+        
         <app-recipe-item *ngFor="let recipeEL of recipes" [recipe]="recipeEL"></app-recipe-item>
     </div>
 </div>
