Completed the Template forms tasks etc

--- a/Angular_2023_Course/src/app/app.component.html
+++ b/Angular_2023_Course/src/app/app.component.html
@@ -11,6 +11,10 @@
       <app-main-game></app-main-game>
       <hr>
       <app-section9main></app-section9main>
+      <hr>
+      <app-section15></app-section15>
+      <hr>
+      <app-templateforms-a></app-templateforms-a>
     </div>
   </div>
 </div>
